[tool.poetry]
name = "nearpy"
version = "0.1.1"
description = "A platform-agnostic signal processing pipeline"
authors = ["Aakash Kapoor"]
license = "GPL-v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.6.0"
torchvision = "^0.21.0"
torchaudio = "^2.6.0"
seaborn = "^0.13.2"
ruptures = "^1.1.9"
scikit-learn = "^1.6.1"
pywavelets = "^1.8.0"
nptdms = "^1.10.0"
mat73 = "^0.65"
bottleneck = "^1.4.2"
pandas = "^2.2.3"
lets-plot = "^4.6.1"
ipympl = "^0.9.7"
pytorch-lightning = "^2.5.0.post0"
torchinfo = "^1.8.0"
llvmlite = "^0.44.0"
tsfresh = "^0.21.0"
tslearn = "^0.6.3"
matplotlib = "^3.10.1"
librosa = "^0.10.2.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
