[project]
name = "nearpy"
version = "0.1.4"
description = "A platform-agnostic signal processing pipeline"
authors = [
    { name = "Aakash Kapoor", email = "ak2247@cornell.edu" }
]
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11,<3.14"

dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pywavelets (>=1.8.0,<2.0.0)",
    "nptdms (>=1.10.0,<2.0.0)",
    "mat73 (>=0.65,<0.66)",
    "bottleneck (>=1.4.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "tslearn (>=0.6.3,<0.7.0)",
    "tsfresh (>=0.21.0,<0.22.0)",
    "lets-plot (>=4.5.2,<5.0.0)",
    "ipympl (>=0.9.6,<0.10.0)",
    "torchinfo (>=1.8.0,<2.0.0)",
    "lightning (>=2.5.0.post0,<3.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "torchmetrics (>=1.6.2,<2.0.0)",
    "hmmlearn (>=0.3.3,<0.4.0)",
    "ssqueezepy (>=0.6.5,<0.7.0)",
    "stonerplots (>=1.7.2,<2.0.0)",
    "emd-signal (>=1.6.4,<2.0.0)",
    "vmdpy (>=0.2,<0.3)",
    "neurokit2 (>=0.2.12,<0.3.0)",
    "torchaudio (>=2.9.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
torch = { version = "*", source = "pytorch-cu130" }
torchvision = { version = "*", source = "pytorch-cu130" }
